--- a/charts/cpanelapi-pipeline/templates/job.yaml
+++ b/charts/cpanelapi-pipeline/templates/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: cpanelapi-pipeline
+  name: cpanel-pipeline
   namespace: concourse-{{ .Values.concourse.team }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -19,8 +19,6 @@ spec:
             value: {{ .Values.concourse.team }}
           - name: CONCOURSE_URL
             value: {{ .Values.concourse.externalURL }}
-          - name: ENV
-            value: {{ .Values.env }}
           - name: FLY_PASSWORD
             valueFrom:
               secretKeyRef:
@@ -39,7 +37,6 @@ spec:
         command: [ "/bin/sh" ]
         args:
           - /scripts/set-pipeline.sh
-          - cpanel-api
         volumeMounts:
           - name: scripts
             mountPath: /scripts
