--- a/charts/idler/values.yaml
+++ b/charts/idler/values.yaml
@@ -1,5 +1,5 @@
 # Docker image version
-image: quay.io/mojanalytics/idler:v0.4.0
+image: quay.io/mojanalytics/idler:v0.5.0
 
 # Schedule when to run
 #   min    hour   day    month (Sun-Sat)
@@ -12,7 +12,7 @@ schedule: "0 22 * * *"
 # See https://kubernetes.io/docs/user-guide/cron-jobs/#concurrency_policy
 concurrencyPolicy: Forbid
 
-labelSelector: 'app=rstudio'
+labelSelector: 'app'
 
 logLevel: 'INFO'
 
