Init User Trident
* Modified `PersistentVolumeClaim` to provision NFS home on NetApp ONTAP via [Trident](https://github.com/NetApp/trident)
* Modified `ResourceQuota` to allow up to two `PersistentVolumeClaim`'s in a user's namespace
* Modified `ResourceQuota` to allow an aggregate of `20GB` in a user's namespace
* Removed un-required `PersistentVolume` resource.  `PersistentVolume`'s will be auto provisioned with [Trident](https://github.com/NetApp/trident)

--- a/charts/init-user/templates/resource-quota.yml
+++ b/charts/init-user/templates/resource-quota.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: user-{{ .Values.Username }}
 spec:
   hard:
-    persistentvolumeclaims: "1"
-    requests.storage: "15Gi"
-# Allows only 1 volume claim of up to 15GB in user's namespace
+    persistentvolumeclaims: "2"
+    requests.storage: "20Gi"
+# Allows up to 2 volume claims that both equal up to 20GB in user's namespace
