--- a/charts/cpanel/templates/role-binding.yaml
+++ b/charts/cpanel/templates/role-binding.yaml
@@ -1,16 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "fullname" . }}
+  name: "{{ .Chart.Name }}"
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  name: {{ template "fullname" . }}
+  name: "{{ .Chart.Name }}"
   kind: ClusterRole
 subjects:
   - apiGroup: ""
-    name: {{ template "fullname" . }}
+    name: "{{ .Chart.Name }}"
     kind: ServiceAccount
-    namespace: {{ .Release.Namespace }}
+    namespace: "{{ .Release.Namespace }}"
 
 # This allows a service account in the Release's namespace (i.e. default) to manage resources in the kube-system namespace
