--- a/charts/cpanel/templates/service-account.yaml
+++ b/charts/cpanel/templates/service-account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: "{{ .Chart.Name }}"
+  namespace: "{{ .Release.Namespace }}"
