--- a/charts/cpanel/templates/deployment.yaml
+++ b/charts/cpanel/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - name: {{ $key }}
               value: "{{ $value }}"
           {{- end }}
-          {{- range $key, $value := $.Values.secretEnv }}
+          {{- range $key, $value := .Values.secretEnv }}
             - name: {{ $key }}
               valueFrom:
                 secretKeyRef:
