Code review amends
Add host label to all resources

--- a/charts/cpanel/templates/role-binding.yaml
+++ b/charts/cpanel/templates/role-binding.yaml
@@ -3,6 +3,10 @@ kind: RoleBinding
 metadata:
   name: "{{ .Chart.Name }}"
   namespace: kube-system
+  labels:
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: "{{ .Chart.Name }}"
+    host: {{ template "host" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   name: "{{ .Chart.Name }}"
