--- a/charts/cpanel/templates/cluster-role.yaml
+++ b/charts/cpanel/templates/cluster-role.yaml
@@ -2,6 +2,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: "{{ .Chart.Name }}"
+  labels:
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: "{{ .Chart.Name }}"
+    host: {{ template "host" . }}
 rules:
   - apiGroups: [""]
     verbs: ["list"]
