--- a/charts/cpanel/templates/service-account.yaml
+++ b/charts/cpanel/templates/service-account.yaml
@@ -3,3 +3,7 @@ kind: ServiceAccount
 metadata:
   name: "{{ .Chart.Name }}"
   namespace: "{{ .Release.Namespace }}"
+  labels:
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: "{{ .Chart.Name }}"
+    host: {{ template "host" . }}
