--- a/charts/cpanel/templates/job.yaml
+++ b/charts/cpanel/templates/job.yaml
@@ -26,7 +26,7 @@ spec:
               python3 manage.py migrate
           env:
             - name: DB_HOST
-              value: {{ template "postgresHost" . }}
+              value: "{{ template "postgresHost" . }}"
             - name: DB_NAME
               value: "{{ .Values.postgresql.postgresDatabase }}"
             - name: DB_USER
