--- a/charts/cpanel/templates/service.yaml
+++ b/charts/cpanel/templates/service.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: {{ .Values.django.port }}
+    targetPort: 80
     protocol: TCP
   selector:
     app: "{{ .Chart.Name }}"
