Add Redis to cpanel for SSE and background tasks

--- a/charts/cpanel/templates/env-configmap.yaml
+++ b/charts/cpanel/templates/env-configmap.yaml
@@ -13,3 +13,4 @@ data:
   ALLOWED_HOSTS: "*"
   AWS_DEFAULT_REGION: "{{ .Values.aws.defaultRegion }}"
   DJANGO_SETTINGS_MODULE: "{{ .Values.django.settingsModule }}"
+  REDIS_HOST: "{{ printf "%s-%s" .Release.Name "redis" | trunc 63 | trimSuffix "-" }}"
