--- a/charts/airflow-sqlite/values.yaml
+++ b/charts/airflow-sqlite/values.yaml
@@ -5,7 +5,7 @@ airflow:
   fernetKey: ""
   image:
     repository: "quay.io/mojanalytics/airflow"
-    tag: "1.10.6-1"
+    tag: "1.10.10"
     pullPolicy: "IfNotPresent"
     port: "8080"
   config:
