--- a/charts/priority-classes/values.yaml
+++ b/charts/priority-classes/values.yaml
@@ -8,7 +8,6 @@ priority_classes:
   - name: webapp-default
     priority_value: 2000000
     description: "2 million"
-# - name: default-priority
-#   global: true
-#   priority_value: 50000
-#   description: "Not low or high priority"
+  - name: concourse
+    priority_value: 20000000
+    description: "20 million"
