Append a 5 character random string to the job name. The correct way to do this is probably have a hook to delete the job after it completes, per this:
https://github.com/helm/helm/issues/1769

But it seems bugged in multiple versions of helm, so this workaround will do for the time being.

--- a/charts/reset-user-home/templates/deployment.yaml
+++ b/charts/reset-user-home/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ .Chart.Name }}-reset-user-home"
+  name: {{ template "fullname" . }}-{{ randAlphaNum 5 | lower }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: "{{ .Chart.Name }}"
