Reduce verbose logging on s3 sync as it's creating massive massive log indices

--- a/charts/nfs-backup/templates/cronjob.yml
+++ b/charts/nfs-backup/templates/cronjob.yml
@@ -27,6 +27,7 @@ spec:
               - sync
               - /homes
               - s3://$(S3_BACKUP_BUCKET_NAME)
+              - --only-show-errors
               - --storage-class 
               - STANDARD_IA
               - --sse 
