cpanel 2.4.3: reverse-proxy container readinessProbe
Using newly added `/nginx-health` endpoint in the CP nginx config to
periodically check that nginx is still alive and serving traffic.

See: https://github.com/ministryofjustice/analytics-platform-control-panel/pull/834/commits/d2e2ba33f46205b66f3060009bbc490890e52275
Part of: https://trello.com/c/eUMRw1gK

--- a/charts/cpanel/templates/deployment.yaml
+++ b/charts/cpanel/templates/deployment.yaml
@@ -51,6 +51,12 @@ spec:
               mountPath: /etc/nginx/conf.d
             - name: staticfiles
               mountPath: /usr/share/nginx/html
+          readinessProbe:
+            httpGet:
+              path: /nginx-health
+              port: http
+            initialDelaySeconds: 5
+            periodSeconds: 5
         - name: worker
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
