cpanel 2.4.4: Added liveliness probe to `worker` (Django Channels)
Use newly added CP command to check whether a worker is still processing
background tasks at a reasonable rate or it's somehow stuck.

This is achieved by using the CP `worker_health` command (see PR below)

```
$ python3 manage.py worker_health --stale-after-secs=120
```

which will periodically submit health tasks and check if one has been
performed recently (withing 2 minutes in this case, configurable using
`----stale-after-secs=120`)

Probes are sent every 30s but note how one or more individual probes can
fail without triggering the restart of the `worker` container.
This is by design as you don't want Kubernetes to be happy-trigger and
restart this container too easily.

`successThreshold=6` means that 6 *consecutive* probes will have to fail
in order to trigger a container restart (that is nothing was run for few
minutes on that specific pod/worker container).

Also note how in reality tasks will be performed by each worker at fairly
regular intervals of every ~30s (confirmed by testing in `dev` environment)

Also see Control Panel command PR: https://github.com/ministryofjustice/analytics-platform-control-panel/pull/840

Part of ticket: https://trello.com/c/eUMRw1gK

--- a/charts/cpanel/templates/deployment.yaml
+++ b/charts/cpanel/templates/deployment.yaml
@@ -68,6 +68,18 @@ spec:
               name: "{{ .Chart.Name }}-env-secrets"
           - secretRef:
               name: "{{ .Chart.Name }}-db-env"
+          livenessProbe:
+              exec:
+                command:
+                  - python3
+                  - manage.py
+                  - worker_health
+                  - "--stale-after-secs=120"
+              initialDelaySeconds: 10
+              periodSeconds: 30
+              failureThreshold: 6
+              successThreshold: 1
+              timeoutSeconds: 30
         - name: backend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
