cpanel 2.4.6: Moved `worker` in separate pod
The `worker` container is decoupled from the nginx/django frontend containers
and there is no reason for it to be in the same pod.

The workers are decoupled as they receive background jobs via redis.

Furthermore, have it in a separate `Deployment` means we can scale workers
independently from the frontend.

This also increase the number of workers replicas to `10` from `3`
(which was the number of frontend replicas).

I've added a `frontend.replicas` and `worker.replicas` values so that
these can potentially be tweaked/configured more easily.

Ticket: https://trello.com/c/Bbl5R56H

--- a/charts/cpanel/templates/frontend-deployment.yaml
+++ b/charts/cpanel/templates/frontend-deployment.yaml
@@ -1,19 +1,22 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: "{{ .Chart.Name }}"
+  name: "{{ .Chart.Name }}-frontend"
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: "{{ .Chart.Name }}"
+    component: "frontend"
 spec:
-  replicas: 3
+  replicas: {{ .Values.frontend.replicas }}
   selector:
     matchLabels:
       app: "{{ .Chart.Name }}"
+      component: "frontend"
   template:
     metadata:
       labels:
         app: "{{ .Chart.Name }}"
+        component: "frontend"
         {{ .Release.Name }}-redis-client: "true"
       annotations:
         iam.amazonaws.com/role: "{{ .Values.aws.iamRole }}"
@@ -57,29 +60,6 @@ spec:
               port: http
             initialDelaySeconds: 5
             periodSeconds: 5
-        - name: worker
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: "{{ .Values.image.pullPolicy }}"
-          command: ["python3", "manage.py", "runworker", "background_tasks"]
-          envFrom:
-          - configMapRef:
-              name: "{{ .Chart.Name }}-env-configmap"
-          - secretRef:
-              name: "{{ .Chart.Name }}-env-secrets"
-          - secretRef:
-              name: "{{ .Chart.Name }}-db-env"
-          livenessProbe:
-              exec:
-                command:
-                  - python3
-                  - manage.py
-                  - worker_health
-                  - "--stale-after-secs=300"
-              initialDelaySeconds: 10
-              periodSeconds: 30
-              failureThreshold: 6
-              successThreshold: 1
-              timeoutSeconds: 30
         - name: backend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
