cpanel 2.4.8: Removed branch-Postgres dependency
This was only used when `tags.branch=true` which never is really as both
`dev` and `alpha` CP use Postgres running on AWS RDS.

This allowed for some simplication and reduced confusion, especially in
the `templates/_helpers.tpl` file.

Also added NOTES.txt to helpfully show the Control Panel URL at the end
of an helm install/upgrade (the correct `https://controlpanel.services...`
one, not the legacy `https://cpanel-brach.` one).

Collateral to ticket: https://trello.com/c/YG9anK8A

--- a/charts/cpanel/templates/secrets.yaml
+++ b/charts/cpanel/templates/secrets.yaml
@@ -18,7 +18,7 @@ metadata:
     app: "{{ .Chart.Name }}"
 type: Opaque
 data:
-  DB_HOST: {{ include "postgresHost" . | b64enc | quote }}
+  DB_HOST: {{ .Values.postgresql.postgresHost | b64enc | quote }}
   DB_NAME: {{ .Values.postgresql.postgresDatabase | b64enc | quote }}
   DB_USER: {{ .Values.postgresql.postgresUser | b64enc | quote }}
   DB_PASSWORD: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
