--- a/charts/cpanel/templates/rbac-bindings.yaml
+++ b/charts/cpanel/templates/rbac-bindings.yaml
@@ -35,7 +35,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: "{{ .Chart.Name }}-read-ingresses"
+  name: "{{ .Chart.Name }}-read-apps-ingresses"
 subjects:
   - apiGroup: ""
     name: "{{ .Chart.Name }}-frontend"
