cpanel 3.0.0: Removed redis dependency (BREAKING CHANGES)
This commit removed the dependency to the `redis` helm chart which was
creating a redis cluster (1 node) on k8s to be used by CP.

We want to move away from Redis on K8s and move Redis to AWS ElastiCache (EC)
so that we can have high availability and redundancy and also not to
worry about this redis cluster as it would be managed by AWS.

In addition to the removal of the `redis` dependency:
- `redis.redisPort` was renamed to `redis.port` for consistency
- `redis.scheme` was added to allow secure connection to Redis cluster
  using SSL/TLS (when this is `rediss`, which is the default) or
  optionally insecurely (when scheme is just `redis`, without the
  additional "s" which stands for "secure")

Part of ticket: https://trello.com/c/YG9anK8A (see related PRs links
on this ticket checklists for more contexts/other related changes)

--- a/charts/cpanel/templates/env-configmap.yaml
+++ b/charts/cpanel/templates/env-configmap.yaml
@@ -12,5 +12,6 @@ data:
   ALLOWED_HOSTS: "*"
   AWS_DEFAULT_REGION: "{{ .Values.aws.defaultRegion }}"
   DJANGO_SETTINGS_MODULE: "{{ .Values.django.settingsModule }}"
-  REDIS_HOST: "{{ printf "%s-%s-%s.%s" .Release.Name "redis" "master" .Release.Namespace | trunc 63 | trimSuffix "-" }}"
-  REDIS_PORT: "{{ .Values.redis.redisPort }}"
+  REDIS_SCHEME: "{{ .Values.redis.scheme }}"
+  REDIS_HOST: "{{ .Values.redis.host }}"
+  REDIS_PORT: "{{ .Values.redis.port }}"
