Adding config to allow deployment of Logstash 7.9

--- a/charts/logstash/files/http.conf
+++ b/charts/logstash/files/http.conf
@@ -14,7 +14,7 @@ input {
 
     output {
       elasticsearch {
-        hosts => "${ELASTICSEARCH_URL}"
+        hosts => "${ELASTICSEARCH_HOST}"
         index => "${ELASTICSEARCH_INDEX}"
         user => "${ELASTICSEARCH_USER}"
         password => "${ELASTICSEARCH_PASSWORD}"
