--- a/charts/logstash/templates/secrets.yaml
+++ b/charts/logstash/templates/secrets.yaml
@@ -9,8 +9,8 @@ metadata:
     release: {{ .Release.Name }}
 type: Opaque
 data:
-  elasticsearch_url: {{ .Values.elasticsearch.url | b64enc | quote }}
   elasticsearch_user: {{ .Values.elasticsearch.user | b64enc | quote }}
+  elasticsearch_host: {{ .Values.elasticsearch.host | b64enc | quote }}
   elasticsearch_password: {{ .Values.elasticsearch.password | b64enc | quote }}
   logstash_user: {{ .Values.logstash.user | b64enc | quote }}
   logstash_password: {{ .Values.logstash.password | b64enc | quote }}
