--- a/charts/logstash/values.yaml
+++ b/charts/logstash/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 
 image:
   repository: docker.elastic.co/logstash/logstash
-  tag: 6.3.1
+  tag: 7.9.1
   pullPolicy: IfNotPresent
   port: 8080
 
@@ -24,9 +24,12 @@ ingress:
 
 config:
 
+# xpack.monitoring.elasticsearch.url: '${ELASTICSEARCH_URL}'
+# log.level: 'trace'
   logstash.yml: |-
     http.host: "0.0.0.0"
     path.config: /usr/share/logstash/pipeline
-    xpack.monitoring.elasticsearch.url: '${ELASTICSEARCH_URL}'
+    xpack.monitoring.elasticsearch.hosts: '${ELASTICSEARCH_HOST}'
     xpack.monitoring.elasticsearch.username: '${ELASTICSEARCH_USER}'
     xpack.monitoring.elasticsearch.password: '${ELASTICSEARCH_PASSWORD}'
+    xpack.monitoring.enabled: true
