--- a/charts/github-actions-runner/templates/secret.yaml
+++ b/charts/github-actions-runner/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.env.org.secret.access_token.name | quote }}
+  name: {{ .Values.secretAccessTokenName | quote }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: {{ template "fullname" . }}
