[github-actions-runner] Fix Helm telpate labels
This now uses the correct variable for labels

--- a/charts/github-actions-runner/templates/deployment.yaml
+++ b/charts/github-actions-runner/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               name: {{ .Values.secretAccessTokenName | quote }}
               key: "token"
         - name: LABELS
-          value: {{ .Values.env.labels | quote }}
+          value: {{ .Values.labels | quote }}
         {{- if .Values.runnerNamePrefix }}
         - name: RUNNER_NAME_PREFIX
           value: {{ .Values.runnerNamePrefix | quote }}
