--- a/charts/github-actions-runner/templates/deployment.yaml
+++ b/charts/github-actions-runner/templates/deployment.yaml
@@ -53,6 +53,8 @@ spec:
               key: "token"
         - name: LABELS
           value: {{ .Values.labels | quote }}
+        - name: DOCKER_HOST
+          value: tcp://localhost:2376
         {{- if .Values.runnerNamePrefix }}
         - name: RUNNER_NAME_PREFIX
           value: {{ .Values.runnerNamePrefix | quote }}
@@ -65,3 +67,17 @@ spec:
         volumeMounts:
         - name: dockersocket
           mountPath: "/var/run/docker.sock"
+      - name: dind
+        command:
+        - dockerd
+        - --host=unix:///var/run/docker.sock
+        - --host=tcp://0.0.0.0:2376
+        env:
+        - name: DOCKER_TLS_CERTDIR
+        image: docker:19.03.12-dind
+        imagePullPolicy: IfNotPresent
+        securityContext:
+          privileged: true
+          readOnlyRootFilesystem: false
+        stdin: true
+        tty: true
