--- a/charts/fluentd/values.yaml
+++ b/charts/fluentd/values.yaml
@@ -252,6 +252,7 @@ fluentdconffiles:
        request_timeout 60
        slow_flush_log_threshold 120s
        max_retry_wait 30
-       disable_retry_limit
+       #disable_retry_limit
+       retry_limit 5
        num_threads 8
     </match>
