Stop quoting the docker host variable
Fixes the error:
Status: invalid argument "\"tcp://0.0.0.0:276\"" for "-H, --host" flag: Invalid bind address format: "tcp://0.0.0.0:2376"

--- a/charts/github-actions-runner/templates/deployment.yaml
+++ b/charts/github-actions-runner/templates/deployment.yaml
@@ -66,7 +66,7 @@ spec:
         command:
         - dockerd
         - --host=unix:///var/run/docker.sock
-        - --host={{ .Values.dockerHost | quote }}
+        - --host={{ .Values.dockerHost }}
         env:
         - name: DOCKER_TLS_CERTDIR
         image: {{ printf "%s:%s" .Values.dind.image.repository .Values.dind.image.tag | quote }}
