webapp 2.3.11: pull fluent-bit image from AWS ECR
It's the same image used before and same tag also but it's hosted on
our AWS ECR repository so that we don't hit the DockerHub rate limits.

--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -29,7 +29,7 @@ FluentBit:
   LogLevel: "info"
   # https://hub.docker.com/r/fluent/fluent-bit
   Image:
-    Repository: fluent/fluent-bit
+    Repository: 593291632749.dkr.ecr.eu-west-1.amazonaws.com/fluent-bit
     Tag: 1.1.1 # Add `-debug` for debugging image
     PullPolicy: "IfNotPresent"
   Resources:
