airflow-k8s 0.5.0: Add Optional Image Pull Secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/airflow-k8s/templates/scheduler-deployment.yml
+++ b/charts/airflow-k8s/templates/scheduler-deployment.yml
@@ -22,6 +22,12 @@ spec:
         app: {{ .Release.Name }}
         component: scheduler
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       serviceAccountName: {{ .Release.Name }}
       initContainers:
       - name: "init"
