--- a/charts/airflow-k8s/templates/create-nfs-dirs.yml
+++ b/charts/airflow-k8s/templates/create-nfs-dirs.yml
@@ -11,6 +11,12 @@ spec:
     metadata:
       name: {{ .Release.Name }}-create-nfs-dirs
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
       - name: "create-nfs-dirs"
         restart: Never
