--- a/charts/airflow-k8s/templates/hooks/init-airflow-ns-hook.yml
+++ b/charts/airflow-k8s/templates/hooks/init-airflow-ns-hook.yml
@@ -19,6 +19,12 @@ metadata:
 spec:
   template:
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
       - name: annotator
         image: gcr.io/google_containers/hyperkube:v1.11.7
