--- a/charts/airflow-k8s/templates/webserver-deployment.yml
+++ b/charts/airflow-k8s/templates/webserver-deployment.yml
@@ -22,6 +22,12 @@ spec:
         component: webserver
         airflow-redis-client: "true"
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       serviceAccountName: {{ .Release.Name }}
       containers:
         - name: webserver
