--- a/charts/airflow-k8s/templates/scheduler-deployment.yml
+++ b/charts/airflow-k8s/templates/scheduler-deployment.yml
@@ -22,6 +22,12 @@ spec:
         app: {{ .Release.Name }}
         component: scheduler
     spec:
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       serviceAccountName: {{ .Release.Name }}
       initContainers:
       - name: "init"
