Think this is everything needed for an update, but let me know if I missed anything.

--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -97,6 +97,7 @@ spec:
           args:
             - "jupyter lab"
             - "--NotebookApp.token=''"
+            - --ContentsManager.allow_hidden=True
           readinessProbe:
             httpGet:
               path: /
