--- a/charts/rstudio/Chart.yaml
+++ b/charts/rstudio/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: RStudio with Auth0 authentication proxy
 name: rstudio
-version: 3.0.0
-appVersion: "RStudio: 4.0.3"
+version: 3.0.1
+appVersion: "RStudio: 4.0.3-1"
