Push testing change

--- a/.github/workflows/charts-lint-test.yaml
+++ b/.github/workflows/charts-lint-test.yaml
@@ -4,8 +4,8 @@ name: "Charts: Lint and test"
 "on":
   pull_request:
     paths:
-    - 'charts/**'
-    - '!charts/**/README.md'
+      - "charts/**"
+      - "!charts/**/README.md"
 
 jobs:
   lint:
