Always add output

--- a/.github/workflows/charts-lint-test.yaml
+++ b/.github/workflows/charts-lint-test.yaml
@@ -51,7 +51,8 @@ jobs:
       - name: Output
         id: chart-testing-output
         uses: actions/github-script@v3
-        if: steps.list-changed.outputs.changed == 'true' || steps.list-changed.outputs.common == 'true'
+        # if: steps.list-changed.outputs.changed == 'true' || steps.list-changed.outputs.common == 'true'
+        if: ${{ always() }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
