--- a/charts/rstudio/Chart.yaml
+++ b/charts/rstudio/Chart.yaml
@@ -3,3 +3,6 @@ description: RStudio with Auth0 authentication proxy
 name: rstudio
 version: 3.0.3
 appVersion: "RStudio: 4.0.3-2"
+maintainers:
+  - name: ministryofjustice
+icon: https://avatars3.githubusercontent.com/u/8361145?s=200&v=4?sanitize=true
