Remove chart install and explain why

--- a/.github/workflows/charts-lint-test.yaml
+++ b/.github/workflows/charts-lint-test.yaml
@@ -69,32 +69,28 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
-
-  install:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Install Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.4.0
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.0.1
-
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.1.0
-        if: needs.lint.outputs.changed == 'true' || needs.lint.outputs.common == 'true'
-
-      - name: Run chart-testing (install)
-        run: ct install --config .github/ct.yaml
-        if: needs.lint.outputs.changed == 'true'
+  # Don't install into KIND right now
+  # Our charts or not currently compatible with newer version of Kubernetes
+  # install:
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Install Helm
+  #       uses: azure/setup-helm@v1
+  #       with:
+  #         version: v3.4.0
+  #     - uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.9
+  #     - name: Set up chart-testing
+  #       uses: helm/chart-testing-action@v2.0.1
+  #     - name: Create kind cluster
+  #       uses: helm/kind-action@v1.1.0
+  #       if: needs.lint.outputs.changed == 'true' || needs.lint.outputs.common == 'true'
+  #     - name: Run chart-testing (install)
+  #       run: ct install --config .github/ct.yaml
+  #       if: needs.lint.outputs.changed == 'true'
